assets/nginx-privileged1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-privileged1
  labels:
    app: nginx-privileged
spec:
  containers:
  - name: nginx
    image: europe-docker.pkg.dev/galloro-demos/trusted/nginx
    securityContext:
      privileged: true
