assets/overquota-cpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: overquota-cpu
spec:
  containers:
  - name: cpu-demo-ctr
    image: vish/stress
    resources:
      limits:
        cpu: "2"
      requests:
        cpu: "2"
    args:
    - -cpus
    - "0.5"
