assets/overquota-mem.yaml
apiVersion: v1
kind: Pod
metadata:
  name: overquota-mem
spec:
  containers:
  - name: memory-demo-ctr
    image: polinux/stress
    resources:
      limits:
        memory: "4Gi"
      requests:
        memory: "2Gi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "600M", "--vm-hang", "1"]
