assets/allow-application-traffic.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-application-traffic
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          type: application
  egress:
  - to:
    - namespaceSelector: {}
    - podSelector: {}
    - ipBlock:
        cidr: 172.16.0.4/32 #Replace with outbound target you want to allow communication to
